--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,20 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.bmuschko:gradle-cargo-plugin:2.1.1'
+    }
+}
+
 plugins {
     id 'java'
     id 'war'
 }
+
+
+apply plugin: 'com.bmuschko.cargo'
 
 group 'com.infopulse'
 version '1.0-SNAPSHOT'
@@ -10,12 +23,31 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven {
+    maven{
         url "http://mvnrepository.com/artifact/"
     }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'javax.servlet:javax.servlet-api:4.0.1'
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+    cargo "org.codehaus.cargo:cargo-core-uberjar:1.4.5",  "org.codehaus.cargo:cargo-ant:1.4.5"
+    compile group: 'javax.servlet.jsp', name: 'jsp-api', version: '2.2'
+    compile group: 'jstl', name: 'jstl', version: '1.2'
+}
+
+cargo {
+    containerId = 'tomcat7x'
+    port = 8090
+
+
+    deployable {
+        context = 'mycontext'
+    }
+
+    remote {
+        hostname = 'localhost'
+        username =  'tomcat'
+        password =  'tomcat'
+    }
 }
