add request dispatcher

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,5 +12,13 @@
         <servlet-name>Myservlet</servlet-name>
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>OutputServlet</servlet-name>
+        <servlet-class>com.infopulse.servlet.OutputServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>OutputServlet</servlet-name>
+        <url-pattern>/output</url-pattern>
+    </servlet-mapping>
 
 </web-app>
