--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,9 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+   <listener>
+       <listener-class>com.infopulse.listener.RequestAttributeListenerImpl</listener-class>
+   </listener> 
    <servlet>
         <servlet-name>Myservlet</servlet-name>
         <servlet-class>com.infopulse.servlet.HelloServlet</servlet-class>
